# ncc-1701

./: .gitignore  Cargo.toml
.cargo/: config.toml
ncc-1701/: Cargo.toml
ncc-1701/src/: main.rs
